--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    
+    
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     implementation libs.androidx.core
     implementation libs.androidx.appcompat
     implementation libs.material
