--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission
         android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
- <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:name=".App"
@@ -27,6 +27,9 @@
             android:exported="false" />
         <activity
             android:name=".activities.CrashActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ExamActivity"
             android:exported="false" />
     </application>
 
