--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId 'com.cyq.awa.hfspro'
         minSdk 21
         targetSdk 34
-        versionCode 1
-        versionName '1.0'
+        versionCode 2
+        versionName 'pre1.1'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
