添加最近考试排名，除夕还在写Java😭

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name=".activities.ExamActivity"
             android:exported="false" />
+             <activity
+            android:name=".activities.LastExamActivity"
+            android:exported="false" />
     </application>
 
 
