--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId 'com.cyq.awa.hfspro'
         minSdk 21
         targetSdk 34
-        versionCode 5
-        versionName "pre1.4"
+        versionCode 6
+        versionName "1.5"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
