--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,11 @@
         <activity
             android:name=".activities.ExamActivity"
             android:exported="false" />
-             <activity
+        <activity
             android:name=".activities.LastExamActivity"
+            android:exported="false" />
+              <activity
+            android:name=".activities.AnswerActivity"
             android:exported="false" />
     </application>
 
