添加图片放大缩放

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,11 @@
         <activity
             android:name=".activities.LastExamActivity"
             android:exported="false" />
-              <activity
+        <activity
             android:name=".activities.AnswerActivity"
+            android:exported="false" />
+            <activity
+            android:name=".activities.ImagePreviewActivity"
             android:exported="false" />
     </application>
 
