--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,9 @@ android {
 }
 
 dependencies {
-  implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+implementation 'com.github.AAChartModel:AAChartCore:-SNAPSHOT'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
