--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -25,9 +26,10 @@
             android:usesCleartextTraffic="true"
             android:name=".activities.GuideActivity"
             android:exported="false" />
-        <activity
-            android:name=".activities.CrashActivity"
-            android:exported="false" />
+      <activity
+    android:name=".activities.CrashActivity"
+    android:process=":crash"
+    android:exported="false" />
         <activity
             android:name=".activities.ExamActivity"
             android:exported="false" />
